chore: removed whitespace, corrected 'section' to '.section'

--- a/scss/_ui-styles.scss
+++ b/scss/_ui-styles.scss
@@ -9,14 +9,19 @@ p {
 	color: rgb(204, 204, 204);
 }
 
-
+.inplayer-paywall {
+	div, p{
+		color: rgb(51, 51, 51);
+		font-weight: 400;
+	}
+}
 h1,
 h2,
 h3 {
 	font-family: $font1;
 	margin-top: 0;
 }
-section{
+.section{
 	padding: 50px 30px;
 	text-align: center;
 
@@ -40,9 +45,7 @@ section{
 		transform: translateX(-50%);
 	}
 }
-.txt-right{
-	text-align: right;
-}
+.txt-right{text-align: right;}
 .button {
 	text-transform: uppercase;
 	display: inline-block;
@@ -63,10 +66,7 @@ section{
 	}
 } // button
 
-a{
-
-	cursor: pointer;
-}
+a{cursor: pointer;}
 
 a.link {
 	color: var(--primary);
